Changed presentation for a number of component. Has still not reached sample components.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@100 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Monitor_Optimizer.tex
+++ b/trunk/Monitor_Optimizer.tex
@@ -16,4 +16,6 @@ $y_{max}$, and the name of the associated instance of
 {\bf Source\_Optimizer} used in the instrument description file (one word,
 without quotes).
 
-As many Monitor\_Optimizer instances as required may be used in an instrument, for possibly more than one optimization location. Multiple instances may have an effect on the total intensity.
+As many Monitor\_Optimizer instances as required may be used in an instrument, 
+for possibly more than one optimization location. 
+Multiple instances may all have an effect on the total intensity.
