--- a/trunk/Source_Optimizer.tex
+++ b/trunk/Source_Optimizer.tex
@@ -140,4 +140,6 @@ the optimization. If no name is given the component name will be used,
 and a '.src' extension will be added. By default, no file is generated.
 The file format is in a McStas 2D record style.
 
-As an alternative, you may use the Source\_adapt component (see section \ref{s:source-adapt}) which performs a 2D phase-space optimization.
+As an alternative, you may use the Source\_adapt component 
+(see section \ref{s:source-adapt}) which performs 
+a 3D phase-space optimization.
