--- a/trunk/arm.tex
+++ b/trunk/arm.tex
@@ -5,8 +5,8 @@
 
 The component {\bf Arm} is empty; is resembles an optical bench
 and has no effect on the neutron ray.
-The function of this component is only to set up a local
-co-ordinate system within the instrument definition.
+The purpose of this component is only to provide a standard
+means of defining a local co-ordinate system within the instrument definition.
 Other components may then be
 positioned relative to the {\bf Arm} component
 using the \MCS\ meta-language.
