--- a/trunk/collimator_radial.tex
+++ b/trunk/collimator_radial.tex
@@ -1,10 +1,10 @@
 \section{Collimator\_radial: A radial Soller blade collimator}
 \index{Optics!Radial collimator}
 
-\component{Collimator\_radial}{(System) E.Farhi, ILL}{$w_1$, $h_1$, $w_2$, $h_2$, $len$, $\theta_{min}$, $\theta_{max}$, $nchan$, $radius$, $divergence$}{$divergence$, $nblades$, $roc$ and others}{Validated}
+\component{Collimator\_radial}{(System) E.Farhi, ILL}{$w_1$, $h_1$, $w_2$, $h_2$, $len$, $\theta_{min}$, $\theta_{max}$, $nchan$, $radius$}{$divergence$, $nblades$, $roc$ and others}{Validated}
 
-This radial collimator works either using a similar approximation as 
-{\bf Collimator\_linear} (see section \ref{collimator-linear}), 
+This radial collimator works either using an analytical approximation
+like {\bf Collimator\_linear} (see section \ref{collimator-linear}), 
 or with an exact model.
 
 The input parameters are the inner radius $radius$, the radial length $len$, 
