--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -26,15 +26,24 @@ as well as the ``generic'' component {\bf Arm}.
 \input{filter}
 
 \newpage
+\chapter{Reflecting optical components: mirrors, and guides}
+\index{Optics|textbf}
+
+This section describes advanced neutron optical
+components such as supermirrors and guides as well as various rotating choppers.
+A description of the reflectivity of a supermirror is found
+in section~\ref{s:mirror}.
+
 \input{guide}
 
-\chapter{Time of flight optical components:
-Choppers, velocity selectors}
-We list in this chapter some of the optics components that may be used for TOF class instrument simulations.
+\chapter{Moving optical components:
+Choppers and velocity selectors}
+We list in this chapter some moving optical components,
+like chopper, that may be used for TOF class instrument simulations,
+and velocity selector used for partially monochromatize continuous beams.
 \index{Library!Components!optics}
 \index{Optics|textbf}
 
-\newpage
 \input{chopper}
 
 \newpage
