--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -6,18 +6,18 @@
 \index{Library!Components!sources}
 
 \MCS\ contains a number of different source components,
-and any simulation will contain exactly one of these source.
+and any simulation will contain exactly one of these sources.
 The main function of a source is to determine a set of initial
 parameters $({\bf r}, {\bf v}, t)$
 for each neutron ray. This is done by Monte Carlo choices from
-suitable distributions. For example, in all present sources
+suitable distributions. For example, in most present sources
 the initial position is
-found from a uniform distribution over the source surface.
-The shape of most sources can be chosen to be either circular or rectangular.
+found from a uniform distribution over the source surface,
+which can be chosen to be either circular or rectangular.
 The initial neutron velocity is selected within an interval
 of either the corresponding energy or the corresponding wavelength.
 Polarization is not relevant for sources,
-and we let the neutron spin ${\bf s}=(0,0,0)$.
+and we initialize the neutron average spin to zero: ${\bf s}=(0,0,0)$.
 
 For time-of-flight sources, the choice of the emission time, $t$,
 is being made on basis of detailed analytical expressions.
@@ -53,24 +53,26 @@ the number of neutrons emitted per second from a
 1~cm$^2$ area on the source surface,
 with direction within a 1~ster.\ solid angle,
 and with wavelength within a 1 {\AA} interval.
-The total number of real neutrons emitted towards a given diaphragm
-in one second is therefore (for constant $\Phi$):
+The total intensity of real neutrons emitted towards a given diaphragm
+(units: n/sec) is therefore (for constant $\Phi$):
 \begin{equation}
-N_{\rm total} = \Phi A \Omega \Delta\lambda ,
+I_{\rm total} = \Phi A \Delta\Omega \Delta\lambda ,
 \end{equation}
-where $A$ is the source area, $\Omega$ is the solid angle of the
+where $A$ is the source area, $\Delta\Omega$ is the solid angle of the
 diaphragm as seen from the source surface, and $\Delta\lambda$ is the
 width of the wavelength interval in which neutrons are emitted (assuming
-a uniform wavelength spectrum). If $N_{\rm sim}$ denotes the number of
+a uniform wavelength spectrum). 
+
+The simulations are performed so that detector intensities
+are independent of the number of neutron histories simulated
+(although more neutron histories will give better statistics).
+If $N_{\rm sim}$ denotes the number of
 neutron histories to simulate, the initial neutron weight $p_0$ must be set to
 \begin{equation}
 p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
     \frac{\Phi(\lambda)}{N_{\rm sim}} A \Omega \Delta\lambda ,
 \end{equation}
 where the source flux is now given a $\lambda$-dependence.
-The simulations are performed so that detector intensities
-are independent of the number of neutron histories simulated
-(although more neutron histories will give better statistics).
 
 As a start, we recommand new \MCS\ users to use the
 {\bf Source\_simple} component.
