--- a/trunk/moderator.tex
+++ b/trunk/moderator.tex
@@ -31,3 +31,5 @@ where the decay constant is given by
 
 The decay parameters are
 $\tau_0$ (in $\mu$s), $E_c$, and $\gamma$ (both in meV).
+
+Other pulsed source models are available from contributed components. See section \ref{sources-seealso}.
