--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -110,6 +110,9 @@ See section \ref{sources-seealso} for details.
 \input{moderator}
 
 \newpage
+\input{ISISdoc.tex}
+
+\newpage
 \input{Source_adapt}
 
 \input{Adapt_check}
@@ -126,10 +129,10 @@ See section \ref{sources-seealso} for details.
 There are many other source definitions in \MCS .
 
 Detailed pulsed source components are available for new facilities
-in a number of contributed components not described in this manual:
+in a number of contributed components:
 \begin{itemize}
-\item SNS ({\bf contrib/SNS\_source})
-\item ISIS ({\bf contrib/ISIS\_moderator})
+\item SNS ({\bf contrib/SNS\_source}),
+\item ISIS ({\bf contrib/ISIS\_moderator}) see section \ref{isis-moderator},
 \item ESS-project ({\bf ESS\_moderator\_long} and {\bf  ESS\_moderator\_short}).
 \end{itemize}
 
