--- a/trunk/powderN.tex
+++ b/trunk/powderN.tex
@@ -9,7 +9,7 @@ samples on a quite detailed level.
 \index{Samples!Powder, multiple diffraction line}
 \index{Diffraction}
 
-\component{Powder\_N}{System}{$r}$, $h$, $\sigma_{\rm abs}$, $\sigma_{\rm inc}$, $V_0$, $f_{\rm pack}$, filename, DW}{}{validation in progress}
+\component{Powder\_N}{System}{$r$, $h$, $\sigma_{\rm abs}$, $\sigma_{\rm inc}$, $V_0$, $f_{\rm pack}$, filename, DW}{}{validation in progress}
 
 The powder diffraction component {\bf PowderN} models a powder sample
 with background coming only from incoherent scattering and and no
